mvp with vite / tailwind

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <title>Fritz2 Template App</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Rankquest Studio allows you to benchmark search relevance metrics for your search APIs. Start optimizing your search experience today!" />
-    <meta property="og:title" content="Rankquest Studio" />
+    <meta name="description" content="TODO DESCRIPTION" />
+    <meta property="og:title" content="TODO TITLE" />
     <meta property="og:description" content="Rankquest Studio allows you to benchmark search relevance metrics for your search APIs. Start optimizing your search experience today!" />
-    <meta property="og:image" content="https://rankquest.jillesvangurp.com/rankquest-screenshot.png" />
-    <meta property="og:url" content="https://rankquest.jillesvangurp.com" />
+    <meta property="og:image" content="TODO" />
+    <meta property="og:url" content="TODO" />
     <meta property="og:type" content="website" />
+    <link href="/src/styles.css" rel="stylesheet" />
 </head>
 <body>
 <div id="target"></div>
 
-<script src="my-fritz2-application.js"></script>
+<script src="build/kotlin-webpack/js/developmentExecutable/app.js"></script>
 </body>
 </html>
